fix: remove white-space:pre-wrap causing extra blank lines between code lines

--- a/css/github-markdown.css
+++ b/css/github-markdown.css
@@ -558,8 +558,7 @@ color: var(--text-link-hover);
 }
 
 .markdown-body .code-holder code {
-white-space: pre-wrap;
-    line-height: 1;
+line-height: 1;
     font-size: 0.8em;
     display: block;
     background-color:rgba(27,31,35,.05);
